# reachy-mini-mcp

./: .env.openai.example  .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  INLINE_REMOVAL_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  chat_app.py  conversation_app.py  culture.yaml  docker-compose-vllm.yml  mcp.stdio.example.json  pyproject.toml  requirements-openai.txt  requirements.txt  server.py  setup.ps1  setup.sh  sonar-project.properties  start.sh  start_daemon.sh  start_openai_server.sh  test_tts_simple.py  tts_queue.py
.claude/: skills.local.yaml.example
.claude/skills/cicd/: SKILL.md
.claude/skills/communicate/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/remember/: SKILL.md
.github/workflows/: publish.yml
agents/reachy/: reachy.system.md
conversation_app/: __init__.py  action_handler.py  app.py  conversation_parser.py  event_handler.py
conversation_app/agents/action-handler/: action-handler.system.md
conversation_app/agents/reachy/: reachy.system.md
docs/: skill-sources.md
hearing_app/: AUDIO_SETUP.md  Dockerfile  README.md  REFACTORING_SIMPLIFIED.md  audio_diagnostics.py  build_docker.sh  hearing_event_emitter.py  record_respeaker.py  requirements.txt  respeaker_capture.py  speech_detector.py  speech_transcriber.py  transcription.py  vad_detector.py  vad_processor.py  voice_recorder.py  whisper_stt.py
reachy_mini_mcp/: __init__.py  __main__.py  _runtime.py  server.py  server_openai.py  tts_queue.py
reachy_mini_mcp/cli/: __init__.py  _clients.py  _errors.py  _mcp.py  _meta.py  _output.py
reachy_mini_mcp/cli/_commands/: __init__.py  doctor.py  explain.py  install.py  overview.py  serve.py  show.py  uninstall.py
reachy_mini_mcp/tools_repository/scripts/: express_emotion.py  get_antennas_state.py  get_head_state.py  get_health_status.py  get_power_state.py  get_robot_state.py  move_antennas.py  perform_gesture.py  reset_antennas.py  shake_head.py  stop_all_movements.py  turn_off_robot.py  turn_on_robot.py
tests/: test_cli_dispatch.py  test_cli_smoke.py  test_clients.py  test_doctor.py  test_mcp_entry.py  test_output_meta.py  test_overview_render.py  test_serve.py  test_version.py
tools_repository/: README.md  SCHEMA.md  get_antennas_state.json  get_head_state.json  get_health_status.json  get_power_state.json  get_robot_state.json  look_at_direction.json  move_antennas.json  move_head.json  reset_antennas.json  reset_head.json  stop_all_movements.json  tilt_head.json  turn_off_robot.json  turn_on_robot.json
